Fix enabling sync scroll by default.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="pref" id="pref">
           <div class="module">
-            <label><input type="checkbox" id="syncScroll" checked> Sync Scrolling</label>
+            <label><input type="checkbox" id="syncScroll"> Sync Scrolling</label>
           </div>
           <div class="switch-field preview-pane">
             <input type="radio" name="showPreference" id="htmlRadio" value="html" onclick="clkPref(this);"/>
