--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </span>
           <span>
             <label style="vertical-align: middle;" title="Light Mode"><input type="radio" name="changeTheme" id="lightThemeRadio" value="light" onclick="changeTheme(this);" title="Light Mode" checked="checked"> <b>Light</b></label>
-            <label style="vertical-align: middle;" title="Dark Mode"><input type="radio" name="changeTheme" id="darkThemeRadio" value="dark" onclick="changeTheme(this);" title="Dark Mode"> <b>Dark</b></label>
+            <label style="vertical-align: middle;" title="Dark Mode"><input type="radio" name="changeTheme" id="darkThemeRadio" value="dark" onclick="changeTheme(this);" title="Dark Mode"> <b>Darks</b></label>
           </span>
         </div>
         <div class="pref" id="pref">
