make some more UI improvements.

--- a/index.html
+++ b/index.html
@@ -33,18 +33,16 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container text-center">
-        <h1>Markdownify</h1>
+        <h1 class="app-name">Markdownify</h1>
         <div>
           <p>
             A minimal Markdown editor
           </p>
         </div>
-        <div>
+        <div class="button-container">
           <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.2.0" class="btn btn-success btn-lg">Download</a>
           <a href="https://github.com/amitmerchant1990/electron-markdownify/" class="btn btn-danger btn-lg">GitHub</a>
         </div>
-        <script src="https://codefund.io/scripts/f0a32f26-7d8a-48d9-917a-a6bdd408d44a/embed.js"></script>
-        <div id="codefund_ad"></div>
       </div>
       <div class="text-center">
         <img src="https://raw.githubusercontent.com/amitmerchant1990/test/master/final-retina-macbookpro-mockup.png" class="img-responsive custom-image">
@@ -53,9 +51,9 @@
 
     <div class="container">
       <div class="row text-center">
-        <h2 class="key_features">Key Features</h2>
+        <h2 class="key_features"><b>Key Features</b></h2>
       </div>
-      <div class="row">
+      <div class="flex-row">
         <div class="col-md-4 outer-tile purple-tile">
           <div class="tile">
             <h3>📔 LivePreview</h3>
@@ -74,8 +72,6 @@
             <p>The good old <b>GitHub Flavored-style</b> Markdown. So, you don't feel out of the place.</p>
           </div>
         </div>
-      </div>
-      <div class="row">
         <div class="col-md-4 outer-tile yellow-tile">
           <div class="tile">
             <h3>🌈 Syntax highlighting</h3>
@@ -85,7 +81,7 @@
         <div class="col-md-4 outer-tile blue-tile">
           <div class="tile">
             <h3>☯ Dark/Light mode</h3>
-            <p>Change the color scheme of the editor based on your preferences. i.e to choose between Dark mode/Light mode </p>
+            <p>Change the color scheme of the editor based on your preferences.</p>
           </div>
        </div>
         <div class="col-md-4 outer-tile maroon-tile">
@@ -102,7 +98,7 @@
     <div class="container">
       <div class="row text-center">
         <div>
-          <h4>Other features including...</h4>
+          <h3><b>Other features including...</b></h3>
           <ul class="center" type="square">
             <li>Toolbar for basic Markdown formatting</li>
             <li>Save the Markdown preview as PDF</li>
@@ -128,10 +124,10 @@
 
     <div class="container">
           <div class="text-center">
-            <h2 class="key_features">Develop</h2>
+            <h2 class="key_features"><b>Develop</b></h2>
           </div>
           <div class="develop">
-              <p>To clone and run this application, you'll need <a href="https://git-scm.com/">Git</a> and <a href="https://nodejs.org/en/download/">Node.js</a> (which comes with <a href="http://npmjs.com/">npm</a>) installed on your computer. From your command line:</p>
+              <p>To clone and run Markdownify locally, you'll need <a href="https://git-scm.com/">Git</a> and <a href="https://nodejs.org/en/download/">Node.js</a> (which comes with <a href="http://npmjs.com/">npm</a>) installed on your computer. From your command line:</p>
           </div>
           <div>
             <pre>
@@ -157,7 +153,7 @@ $ npm start
     <div class="container">
       <div class="row text-center credits">
         <div>
-          <h2 class="key_features">Credits</h2>
+          <h2 class="key_features"><b>Credits</b></h2>
           <p>Markdowinfy is built using <a href="http://electron.atom.io/">Electron</a>, <a href="https://nodejs.org/">Node.js</a> and some <a href="https://github.com/amitmerchant1990/electron-markdownify#credits">more awesome software packages</a>.</p>
         </div>
       </div>
@@ -166,7 +162,7 @@ $ npm start
     <hr>
 
     <footer>
-      <p class="text-center">Created by <a href="https://www.amitmerchant.com/">Amit Merchant</a>.</p>
+      <p class="text-center"><b>Created with ❤️ by <a href="https://www.amitmerchant.com/">Amit Merchant</a>.</b></p>
     </footer>
 
     <!-- Bootstrap core JavaScript
