more UI updates.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="button-container">
           <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.2.0" class="btn btn-success btn-lg">Download</a>
-          <a href="https://github.com/amitmerchant1990/electron-markdownify/" class="btn btn-danger btn-lg">GitHub</a>
+          <a href="https://github.com/amitmerchant1990/electron-markdownify/" class="btn btn-purple btn-lg">GitHub</a>
         </div>
       </div>
       <div class="text-center">
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container key-features">
       <div class="row text-center">
         <h2 class="key_features"><b>Key Features</b></h2>
       </div>
