more UI updates.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="text-center">
-        <img src="https://raw.githubusercontent.com/amitmerchant1990/test/master/final-retina-macbookpro-mockup.png" class="img-responsive custom-image">
+        <img src="/img/final-retina-macbookpro-mockup.png" class="img-responsive custom-image">
       </div>
     </div>
 
